--- a/css.css
+++ b/css.css
@@ -35,6 +35,8 @@ html {
     margin: 10px;
     text-shadow: 1px 1px var(--2);
     padding: 10px;
+    border: 3px solid;
+    border-radius: 40px;
 }
 .bw p{
     font-size: 1.2em;
