--- a/css.css
+++ b/css.css
@@ -32,7 +32,7 @@ html {
 .bw{
     display: grid;
     background-color: rgba(71, 245, 71, 0.1);
-    margin: 10px;
+    margin: 30px 10px;
     text-shadow: 1px 1px var(--2);
     padding: 10px;
     border: 3px solid;
