--- a/css.css
+++ b/css.css
@@ -26,6 +26,7 @@ html {
     margin: 10px 0px 10px 0px;
     text-align: center;
     max-height: 90%;
+    background-color: black;
     
 }
 
@@ -42,11 +43,12 @@ html {
     font-size: 1.2em;
     margin: 5px 10px 5px 10px;
     text-align: center;
+    color: white;
 }
 .picturetags{
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows:  0.1fr 1fr 0.1fr 1fr 0.1fr 1fr 0.1fr 1fr ;
+    grid-template-rows:  0.1fr 1fr 0.1fr 1fr 0.1fr 1fr ;
     margin: 10px 10px;
     padding: 10px;
     text-align: center;
@@ -66,6 +68,8 @@ html {
     font-size: 1.3em;
     align-items: center;
     text-decoration: underline;
+    text-decoration-color: var(--1);
+    color: white;
 }
 .img2{
     grid-column: 1/2;
@@ -81,6 +85,8 @@ html {
     font-size: 1.3em;
     align-items: center;
     text-decoration: underline;
+    text-decoration-color: var(--1);
+    color: white;
     
 }
 .img3{
@@ -98,6 +104,8 @@ html {
     font-size: 1.3em;
     align-items: center;
     text-decoration: underline;
+    text-decoration-color: var(--1);
+    color: white;
 }
 .img4{
     grid-column: 1/2;
@@ -113,6 +121,8 @@ html {
     font-size: 1.3em;
     align-items: center;
     text-decoration: underline;
+    text-decoration-color: var(--1);
+    color: white;
 }
 h4 {
     display: grid;
@@ -175,8 +185,9 @@ h4 {
     text-align:center;
     font-size: 1.3em;
     padding: 5px 20px;
-    
     text-decoration: underline;
+    text-decoration-color: var(--1);
+    color: white;
 }
 .footer{
     text-align: center;
@@ -192,6 +203,8 @@ h4 {
     border: 3px solid;
     border-radius: 40px;
     margin: 0px 30px;
+    color: white;
+    border-color: var(--1);
 }
 .Coninfo{
     text-align: center;
@@ -201,8 +214,70 @@ h4 {
 .GIT{
     padding: 0px 20px;
     font-size: 1.05em;
+    color: white;
 }
 #Textarea.info{
     border: 0;
     padding: 0;
 }
+
+.navbar {
+    overflow: hidden;
+    background-color: black;
+    
+  }
+  
+  .navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
+  .dropdown .dropbtn {
+    font-size: 16px;  
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  
+  .navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: rgb(116, 243, 116);;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: black;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    float: none;
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: ;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
