--- a/css.css
+++ b/css.css
@@ -308,18 +308,19 @@ h4 {
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
+    justify-content: space-evenly;
   }
   
   /* Create four equal columns that sits next to each other */
   .column {
-    flex: 25%;
-    max-width: 25%;
+    flex: 100%;
+    max-width: 80%;
     padding: 0 4px;
   }
   
   .column img {
-    margin-top: 20px;
-    margin-left: 20px;
+    margin-top: 8px;
+    margin-left: 8px;
     vertical-align: left;
     width: 45%;
   }
